demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hello123.rossreicks.com
    external-dns.alpha.kubernetes.io/target: home.rossreicks.com
    # tls is current being handled by upstream caddy reverse proxy, once that is removed, we can use cert-manager to handle tls
    #cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - example.rossreicks.com
  #   secretName: quickstart-example-tls
  rules:
  - host: hello123.rossreicks.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
